# usa_neural_networks

./: README.md  flake.nix  pyproject.toml
src/: 1_intro_jax.ipynb  2_sgd.ipynb  3_neurona_artificial.ipynb  4_ann.ipynb  5_multilayer.ipynb  6_flax.ipynb  7_flax2.ipynb  8_optax.ipynb  9_crossval.ipynb  taller1.ipynb
